--- a/index.src.html
+++ b/index.src.html
@@ -2176,7 +2176,7 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
   <dt><dfn dict-member for=VideoEncoderConfig>bitrate</dfn></dt>
   <dd>
     The average bitrate of the encoded video given in units of bits per second.
-      
+
     NOTE: Authors are encouraged to additionally provide a
     {{VideoEncoderConfig/framerate}} to inform rate control.
   </dd>
@@ -3871,7 +3871,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
             subsample for |plane|.
         4. If |rect|.{{DOMRectReadOnly/x}} is not a multiple of |sampleWidth|,
             return `false`.
-        5. If |rect|.{{DOMRectReadOnly/y}} is not a multiple of |sampleHeight|, 
+        5. If |rect|.{{DOMRectReadOnly/y}} is not a multiple of |sampleHeight|,
             return `false`.
         8. Increment |planeIndex| by `1`.
     5. Return `true`.
@@ -4405,10 +4405,10 @@ interface VideoColorSpace {
 };
 
 dictionary VideoColorSpaceInit {
-  VideoColorPrimaries primaries;
-  VideoTransferCharacteristics transfer;
-  VideoMatrixCoefficients matrix;
-  boolean fullRange;
+  VideoColorPrimaries? primaries;
+  VideoTransferCharacteristics? transfer;
+  VideoMatrixCoefficients? matrix;
+  boolean? fullRange;
 };
 </xmp>
 
@@ -4419,7 +4419,7 @@ dictionary VideoColorSpaceInit {
 :: The transfer characteristics.
 : <dfn attribute for=VideoColorSpace>\[[matrix]]</dfn>
 :: The matrix coefficients.
-: <dfn attribute for=VideoColorSpace>[[full range]]</dfn>
+: <dfn attribute for=VideoColorSpace>\[[full range]]</dfn>
 :: Indicates whether full-range color values are used.
 
 ### Constructors ### {#videocolorspace-constructors}
