--- a/index.src.html
+++ b/index.src.html
@@ -4419,7 +4419,7 @@ dictionary VideoColorSpaceInit {
 :: The transfer characteristics.
 : <dfn attribute for=VideoColorSpace>\[[matrix]]</dfn>
 :: The matrix coefficients.
-: <dfn attribute for=VideoColorSpace>\[[full range]]</dfn>
+: <dfn attribute for=VideoColorSpace>[[full range]]</dfn>
 :: Indicates whether full-range color values are used.
 
 ### Constructors ### {#videocolorspace-constructors}
