Introduce metadata registry

--- a/index.src.html
+++ b/index.src.html
@@ -100,6 +100,10 @@ spec: css-images-3; urlPrefix: https://www.w3.org/TR/css-images-3/
 spec: webrtc-svc; urlPrefix: https://w3c.github.io/webrtc-svc/
     type: dfn; text: scalability mode identifier; url:#scalabilitymodes*
 
+spec: webcodecs-videoframemetadata-registry; urlPrefix: https://w3c.github.io/webcodecs/videoframemetadata_registry.html
+    type: dictionary
+        text: VideoFrameMetadata; url: dictdef-videoframemetadata
+
 spec: ECMASCRIPT; urlPrefix: https://tc39.es/ecma262/
     type: dfn; text: the current Realm; url: #current-realm
 </pre>
@@ -3232,9 +3236,6 @@ dictionary VideoFrameBufferInit {
 
   VideoColorSpaceInit colorSpace;
 };
-
-dictionary VideoFrameMetadata {
-};
 </xmp>
 
 ### Internal Slots ###{#videoframe-internal-slots}
@@ -3293,9 +3294,8 @@ dictionary VideoFrameMetadata {
 :: The {{VideoFrameMetadata}} associated with this frame.
 
 <div class='note'>
-{{VideoFrameMetadata}} is designed to be extended by other specifications.
-Specifications that do extend {{VideoFrameMetadata}} must make sure that
-added properties are serializable.
+{{VideoFrameMetadata}} is defined in [[webcodecs-videoframemetadata-registry]].
+By design, all {{VideoFrameMetadata}} properties must be serializable.
 </div>
 
 ### Constructors ###{#videoframe-constructors}
