fix wrong reference of RFC7587 in opus_codec_registration

--- a/index.src.html
+++ b/index.src.html
@@ -2073,9 +2073,9 @@ To check if an {{AudioEncoderConfig}} is a <dfn>valid AudioEncoderConfig</dfn>,
 run these steps:
 1. If {{AudioEncoderConfig/codec}} is not a <a>valid codec string</a>, return
     `false`.
-2. If the current codec's registry defines a codec-specific additional configuration
-    validation steps, run the algorithm defined in the registry. If the return
-    value is `false`, return it.
+2. If the {{AudioEncoderConfig}} has a codec-specific extension and the corresponding 
+    registration in the [[WEBCODECS-CODEC-REGISTRY]] defines steps to check whether the
+    the extension is a valid extension, return the result of running those steps.
 3. Return `true`.
 
 <dl>
