--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -136,10 +136,9 @@ dictionary OpusEncoderConfig {
 </xmp>
 </pre>
 
-To check if an {{OpusEncoderConfig}} is a valid OpusEncoderConfig,
-run these steps:
+To check if an {{OpusEncoderConfig}} is valid, run these steps:
 1. If {{OpusEncoderConfig/frameDuration}} is not a valid ptime value,
-    which is described in section 6.1 of [[RFC6381]], return `false`.
+    which is described in Section 6.1 of [[RFC7587]], return `false`.
 2. Return `true`.
 
 <dl>
