--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -137,7 +137,7 @@ dictionary OpusEncoderConfig {
 </pre>
 
 To check if an {{OpusEncoderConfig}} is valid, run these steps:
-1. If {{OpusEncoderConfig/frameDuration}} is not a valid ptime value,
+1. If {{OpusEncoderConfig/frameDuration}} is not a valid `ptime` value,
     which is described in Section 6.1 of [[RFC7587]], return `false`.
 2. Return `true`.
 
