--- a/index.src.html
+++ b/index.src.html
@@ -2515,7 +2515,7 @@ enum EncodedAudioChunkType {
     and |forStorage|) are:
 :: 1. If |forStorage| is `true`, throw a {{TypeError}}.
     2. For each {{EncodedAudioChunk}} internal slot in |value|, assign the value
-        of each internal slot to a field in |serialized| with the same name
+        of each internal slot to a field in |serialized| with the same name as
         the internal slot.
 
 : The {{EncodedAudioChunk}} [=deserialization steps=] (with |serialized| and
@@ -2607,7 +2607,7 @@ enum EncodedVideoChunkType {
     and |forStorage|) are:
 :: 1. If |forStorage| is `true`, throw a {{TypeError}}.
     2. For each {{EncodedVideoChunk}} internal slot in |value|, assign the value
-        of each internal slot to a field in |serialized| with the same name
+        of each internal slot to a field in |serialized| with the same name as
         the internal slot.
 
 : The {{EncodedVideoChunk}} [=deserialization steps=] (with |serialized| and
