Address some of Chris's feedback

--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -1,18 +1,18 @@
 <pre class='metadata'>
 Title: WebCodecs VideoFrame Metadata Registry
 Repository: w3c/webcodecs
-Status: NOTE-ED
-Shortname: webcodecs-videoframemetadata-registry
+Status: DRY
+Shortname: webcodecs-video-frame-metadata-registry
 Level: none
 Group: mediawg
-ED: https://w3c.github.io/webcodecs/videoframemetadata_registry.html
-TR: https://www.w3.org/TR/webcodecs-videoframemetadata-registry/
-Editor:
+ED: https://w3c.github.io/webcodecs/video-frame-metadata-registry.html
+TR: https://www.w3.org/TR/webcodecs-video-frame-metadata-registry/
+Editor: Youenn Fablet, w3cid 96458, Apple Inc., youenn@apple.com
 
 Boilerplate: omit conformance
 
 Abstract: This registry is intended to enumerate the metadata fields that can be attached
-    to {{VideoFrame}} objects via the {{VideoFrameMetadata}} dictionary..
+    to {{VideoFrame}} objects via the {{VideoFrameMetadata}} dictionary.
 
 Markup Shorthands:css no, markdown yes, dfn yes
 !Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
@@ -30,32 +30,41 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Registration Entry Requirements {#registration-entry-requirements}
 ==================================================================
 
-A registration entry, called metadata, has the following requirements:
-1. Each metadata is defined as a separate {{VideoFrameMetadata}} dictionary member.
-2. Each metadata MUST be serializable.
-3. Each metadata should have clearly defined semantics.
-   In particular, its interactions with the media processing pipeline
-   (encoders, decoders, renderers...) should be well defined.
+A registration entry is a document describing one or several metadata entry.
+A registrating entry has the following requirements:
+1. Each metadata entry is defined as a separate {{VideoFrameMetadata}}
+    dictionary member.
+2. Each metadata entry MUST be serializable.
+3. Each metadata entry should have clearly defined semantics.
+    In particular, its interactions with the media processing pipeline
+    (encoders, decoders, renderers, etc.) should be well defined.
+4. A candidate registration entry must be announced by filing an issue in the
+    WebCodecs GitHub issue tracker so they can be discussed and evaluated for
+    compliance before being added to the registry. If the Media Working Group
+    reaches consensus to accept the candidate, a pull request should be drafted
+    (either by editors or by the party requesting the candidate registration)
+    to register the candidate.The registry editors will review and merge the
+    pull request.
 
-VideoFrameMetadata definition
-============================================
+VideoFrameMetadata definition {#videoframemetadata-definition}
+=============================================================
 <xmp class='idl'>
 dictionary VideoFrameMetadata {
 };
 </xmp>
 
-VideoFrameMetadata members
-============================================
+VideoFrameMetadata members {#videoframemetadata-members}
+========================================================
 
 
 Privacy Considerations {#privacy-considerations}
-==========================================================================
+================================================
 
 Please refer to the section [[WEBCODECS#privacy-considerations|Privacy
 Considerations]] in [[WEBCODECS]].
 
 Security Considerations {#security-considerations}
-==========================================================================
+==================================================
 
 Please refer to the section [[WEBCODECS#security-considerations|Security
 Considerations]] in [[WEBCODECS]].
