Add policy for changes to existing registry entries
This attempts to formalize the policy for changes proposed in:
https://github.com/w3c/webcodecs/issues/571#issuecomment-1265716042

--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -89,6 +89,12 @@ Registration Entry Requirements {#registration-entry-requirements}
     candidate, a pull request should be drafted (either by editors or by the
     party requesting the candidate registration) to register the candidate. The
     registry editors will review and merge the pull request.
+5. Existing entries cannot be deleted or deprecated. They may be changed after
+    being published through the same process as candidate entries. Possible
+    changes include expansion of the codec string to better qualify the codec,
+    adjustments to the codec name string, and modification of the link to the
+    public specification.
+
 
 Audio Codec Registry {#audio-codec-registry}
 ============================================
