Add AllowShared to EncodedVideoChunkInit data

--- a/index.src.html
+++ b/index.src.html
@@ -2549,7 +2549,7 @@ dictionary EncodedVideoChunkInit {
   required EncodedVideoChunkType type;
   [EnforceRange] required long long timestamp;        // microseconds
   [EnforceRange] unsigned long long duration;         // microseconds
-  required BufferSource data;
+  required [AllowShared] BufferSource data;
 };
 
 enum EncodedVideoChunkType {
