Address Chris comments

--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -30,12 +30,12 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Registration Entry Requirements {#registration-entry-requirements}
 ==================================================================
 
-A registration entry is a document describing one or several metadata entry.
-A registrating entry has the following requirements:
+A registration entry is a document describing one or several metadata entry,
+and has the following requirements:
 1. Each metadata entry is defined as a separate {{VideoFrameMetadata}}
     dictionary member.
-2. Each metadata entry MUST be serializable.
-3. Each metadata entry should have clearly defined semantics.
+2. Each metadata entry must be serializable.
+3. Each metadata must be defined by a W3C specification and have clearly defined semantics.
     In particular, its interactions with the media processing pipeline
     (encoders, decoders, renderers, etc.) should be well defined.
 4. A candidate registration entry must be announced by filing an issue in the
