RGBA sample size is 32 bits
This fixes #573.

--- a/index.src.html
+++ b/index.src.html
@@ -4373,7 +4373,8 @@ is its own [=equivalent opaque format=].
     This format is composed of a single plane, that encodes four components:
     Red, Green, Blue, and an alpha value, present in this order.
 
-    Each sample in this format is 8 bits, and each pixel is therefore 32 bits.
+    Each sample in this format is 32 bits, corresponding to the four 8 bits
+    values packed consecutively, one for each component.
 
     There are {{VideoFrame/codedWidth}} * {{VideoFrame/codedHeight}} * 4 samples
     (and therefore bytes) in the single plane, arranged starting at the top
