--- a/index.src.html
+++ b/index.src.html
@@ -4376,7 +4376,7 @@ is its own [=equivalent opaque format=].
     Each sample in this format is 32 bits, corresponding to the four 8 bits
     values packed consecutively, one for each component.
 
-    There are {{VideoFrame/codedWidth}} * {{VideoFrame/codedHeight}} * 4 samples
+    There are {{VideoFrame/codedWidth}} * {{VideoFrame/codedHeight}} * samples
     (and therefore bytes) in the single plane, arranged starting at the top
     left in the image, in {{VideoFrame/codedHeight}} lines of
     {{VideoFrame/codedWidth}} samples.
