Make VideoDecoderConfig.description AllowShared

--- a/index.src.html
+++ b/index.src.html
@@ -1958,7 +1958,7 @@ VideoDecoderConfig{#video-decoder-config}
 <xmp class='idl'>
 dictionary VideoDecoderConfig {
   required DOMString codec;
-  BufferSource description;
+  [AllowShared] BufferSource description;
   [EnforceRange] unsigned long codedWidth;
   [EnforceRange] unsigned long codedHeight;
   [EnforceRange] unsigned long displayAspectWidth;
