--- a/samples/index.html
+++ b/samples/index.html
@@ -27,6 +27,10 @@
         <h1><a href="./capture-to-file/capture-to-file.html">Capture To File</a></h1>
         <p>Reading from camera, encoding via webcodecs, and creating a webm file on disk.</p>
       </article>
+      <article onclick="window.location.href='./encode-decode-worker/index.html';">
+        <h1><a href="./encode-deocde-worker/index.html">WebCodecs in Worker</a></h1>
+        <p>Capture from camera, encode and decode in a worker</p>
+      </article>
     </div>
   </div>
 </div>
