Add null defaults to VideoColorSpaceInit members
No need to do in prose what Web IDL can achieve.

--- a/index.src.html
+++ b/index.src.html
@@ -4444,10 +4444,10 @@ interface VideoColorSpace {
 };
 
 dictionary VideoColorSpaceInit {
-  VideoColorPrimaries? primaries;
-  VideoTransferCharacteristics? transfer;
-  VideoMatrixCoefficients? matrix;
-  boolean? fullRange;
+  VideoColorPrimaries? primaries = null;
+  VideoTransferCharacteristics? transfer = null;
+  VideoMatrixCoefficients? matrix = null;
+  boolean? fullRange = null;
 };
 </xmp>
 
@@ -4466,18 +4466,10 @@ dictionary VideoColorSpaceInit {
   VideoColorSpace(init)
 </dfn>
 1. Let |c| be a new {{VideoColorSpace}} object, initialized as follows:
-    1. If `primaries` is present in `init`, assign `init.primaries` to
-        {{VideoColorSpace/[[primaries]]}}. Otherwise, assign `null` to
-        {{VideoColorSpace/[[primaries]]}}.
-    2. If `transfer` is present in `init`, assign `init.transfer` to
-        {{VideoColorSpace/[[transfer]]}}. Otherwise, assign `null` to
-        {{VideoColorSpace/[[transfer]]}}.
-    3. If `matrix` is present in `init`, assign `init.matrix` to
-        {{VideoColorSpace/[[matrix]]}}. Otherwise, assign `null` to
-        {{VideoColorSpace/[[matrix]]}}.
-    4. If `fullRange` is present in `init`, assign `init.fullRange` to
-        {{VideoColorSpace/[[full range]]}}. Otherwise, assign `null` to
-        {{VideoColorSpace/[[full range]]}}.
+    1. Assign `init.primaries` to {{VideoColorSpace/[[primaries]]}}.
+    2. Assign `init.transfer` to {{VideoColorSpace/[[transfer]]}}.
+    3. Assign `init.matrix` to {{VideoColorSpace/[[matrix]]}}.
+    4. Assign `init.fullRange` to {{VideoColorSpace/[[full range]]}}.
 6. Return |c|.
 
 ### Attributes ### {#videocolorspace-attributes}
