Add VideoFrame Metadata Registry to local biblio
The entry is needed until the registry gets published and can be added to
official databases of specs.

--- a/index.src.html
+++ b/index.src.html
@@ -114,6 +114,15 @@ spec: ECMASCRIPT; urlPrefix: https://tc39.es/ecma262/
     "title": "Coding-independent code points for video signal type identification",
     "publisher": "ITU",
     "date": "December 2016"
+  },
+  "WEBCODECS-VIDEO-FRAME-METADATA-REGISTRY": {
+    "href": "https://w3c.github.io/webcodecs/video_frame_metadata_registry.html",
+    "title": "WebCodecs VideoFrame Metadata Registry",
+    "publisher": "W3C",
+    "authors": [
+      "Youenn Fablet"
+    ],
+    "status": "ED"
   }
 }
 </pre>
