Add defaults to booleans

--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -134,8 +134,8 @@ dictionary OpusEncoderConfig {
   [EnforceRange] unsigned long frameDuration;
   [EnforceRange] unsigned long complexity;
   [EnforceRange] unsigned long packetlossperc;
-  boolean useinbandfec;
-  boolean usedtx;
+  boolean useinbandfec = false;
+  boolean usedtx = false;
 };
 </xmp>
 </pre>
