Move VideoFrameMetadata dfn to WebCodecs
A registry cannot contain normative IDL, so the base definition of the
`VideoFrameMetadata` dictionary should remain in WebCodecs.

Also note that while the registry will be published as a "W3C Draft Registry",
the document in the repo remains an "Editor's Draft". Updating the status
accordingly.

--- a/index.src.html
+++ b/index.src.html
@@ -100,9 +100,6 @@ spec: css-images-3; urlPrefix: https://www.w3.org/TR/css-images-3/
 spec: webrtc-svc; urlPrefix: https://w3c.github.io/webrtc-svc/
     type: dfn; text: scalability mode identifier; url:#scalabilitymodes*
 
-spec: webcodecs-video-frame-metadata-registry; urlPrefix: https://w3c.github.io/webcodecs/video-frame-metadata-registry.html
-    type: dictionary; text: VideoFrameMetadata; url: dictdef-videoframemetadata
-
 spec: ECMASCRIPT; urlPrefix: https://tc39.es/ecma262/
     type: dfn; text: the current Realm; url: #current-realm
 </pre>
@@ -3283,6 +3280,10 @@ dictionary VideoFrameBufferInit {
 
   VideoColorSpaceInit colorSpace;
 };
+
+dictionary VideoFrameMetadata {
+  // Possible members are recorded in the VideoFrame Metadata Registry.
+};
 </xmp>
 
 ### Internal Slots ###{#videoframe-internal-slots}
@@ -3339,8 +3340,8 @@ dictionary VideoFrameBufferInit {
 
 : <dfn attribute for=VideoFrame>\[[metadata]]</dfn>
 :: The {{VideoFrameMetadata}} associated with this frame.
-     {{VideoFrameMetadata}} is defined in [[webcodecs-video-frame-metadata-registry]].
-     By design, all {{VideoFrameMetadata}} properties are serializable.
+    Possible members are recorded in [[webcodecs-video-frame-metadata-registry]].
+    By design, all {{VideoFrameMetadata}} properties are serializable.
 
 ### Constructors ###{#videoframe-constructors}
 
