Add requirements to metadata registry definition
Covers adding, changing, and deprecating registry entries

--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -31,21 +31,30 @@ spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
 Registration Entry Requirements {#registration-entry-requirements}
 ==================================================================
 
-A registration entry is a document describing one or several metadata entry,
+A registration entry is a document describing one or several metadata entries,
 and has the following requirements:
 1. Each metadata entry is defined as a separate {{VideoFrameMetadata}}
     dictionary member.
 2. Each metadata entry must be serializable.
-3. Each metadata must be defined by a W3C specification and have clearly defined semantics.
-    In particular, its interactions with the media processing pipeline
-    (encoders, decoders, renderers, etc.) should be well defined.
-4. A candidate registration entry must be announced by filing an issue in the
+3. Each metadata entry must be defined by a W3C specification that has
+    reached consensus in the originating Working Group.
+4. Each metadata entry must have clearly defined semantics. In particular,
+    its interactions with the media processing pipeline (encoders, decoders,
+    renderers, etc.) should be well defined.
+5. A candidate registration entry must be announced by filing an issue in the
     WebCodecs GitHub issue tracker so they can be discussed and evaluated for
     compliance before being added to the registry. If the Media Working Group
     reaches consensus to accept the candidate, a pull request should be drafted
     (either by editors or by the party requesting the candidate registration)
     to register the candidate. The registry editors will review and merge the
     pull request.
+6. Existing entries may be changed after being published, through the same
+    process as candidate entries. Possible changes include modification of
+    the link to the public specification.
+7. Existing entries may be deprecated. This requires Media Working Group
+    consensus, and if still active, consensus of the Working Group that
+    originated the registration entry specification.
+
 
 VideoFrameMetadata members {#videoframemetadata-members}
 ========================================================
