Clarify metadata entry requirements

--- a/video_frame_metadata_registry.src.html
+++ b/video_frame_metadata_registry.src.html
@@ -38,9 +38,9 @@ and has the following requirements:
 2. Each metadata entry must be serializable.
 3. Each metadata entry must be defined by a W3C specification that has
     reached consensus in the originating Working Group.
-4. Each metadata entry must have clearly defined semantics. In particular,
-    its interactions with the media processing pipeline (encoders, decoders,
-    renderers, etc.) should be well defined.
+4. The specification defining each metadata entry must provide clearly defined
+    semantics. In particular, its interactions with the media processing
+    pipeline (encoders, decoders, renderers, etc.) should be well defined.
 5. A candidate registration entry must be announced by filing an issue in the
     WebCodecs GitHub issue tracker so they can be discussed and evaluated for
     compliance before being added to the registry. If the Media Working Group
