Remove text description of defaults

--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -158,7 +158,6 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
   <dt><dfn dict-member for=OpusEncoderConfig>frameDuration</dfn></dt>
   <dd>
     Configures the frame duration, in milliseconds, of output {{EncodedAudioChunk}}s.
-    If not specified, the default is `20` milliseconds.
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>complexity</dfn></dt>
   <dd>
@@ -170,19 +169,18 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
   <dt><dfn dict-member for=OpusEncoderConfig>packetlossperc</dfn></dt>
   <dd>
     Configures the encoder's expected packet loss percentage. The valid range is
-    `0` to `100`. If no value is specified, the default is `0`.
+    `0` to `100`.
 
     NOTE: The packet loss percentage might be updated over the course of the encoding, and
       it is recommended for User Agents to support these reconfigurations.
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>useinbandfec</dfn></dt>
   <dd>
-    Specifies whether the encoder provides Opus in-band FEC. If no value is specified,
-    the default is `false`.
+    Specifies whether the encoder provides Opus in-band FEC.
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>usedtx</dfn></dt>
   <dd>
-    Specifies if the encoder uses DTX. If no value is specified, the default is `false`.
+    Specifies if the encoder uses DTX.
   </dd>
 </dl>
 
