Address minor comment

--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -172,7 +172,7 @@ To check if an {{OpusEncoderConfig}} is valid, run these steps:
     Configures the encoder's expected packet loss percentage. The valid range is
     `0` to `100`.
 
-    NOTE: The packet loss percentage might be updated over the course of the
+    NOTE: The packet loss percentage might be updated over the course of an
     encoding, and it is recommended for User Agents to support these reconfigurations.
   </dd>
   <dt><dfn dict-member for=OpusEncoderConfig>useinbandfec</dfn></dt>
