Change type to long long

--- a/opus_codec_registration.src.html
+++ b/opus_codec_registration.src.html
@@ -131,7 +131,7 @@ OpusEncoderConfig {#opus-encoder-config}
 <xmp>
 dictionary OpusEncoderConfig {
   OpusBitstreamFormat format = "opus";
-  [EnforceRange] unsigned long frameDuration = 20000;
+  [EnforceRange] unsigned long long frameDuration = 20000;
 };
 </xmp>
 </pre>
