--- a/alaw_codec_registration.src.html
+++ b/alaw_codec_registration.src.html
@@ -14,9 +14,9 @@ Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.co
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for A-law encoded PCM, the (1) fully qualified codec strings,
     (2) the codec-specific {{EncodedAudioChunk}}
-    [=EncodedAudioChunk/[[internal data]]=] bytes, (3) the
-    {{AudioDecoderConfig.description}}, and (4) the values of
-    {{EncodedAudioChunk}} [=EncodedAudioChunk/[[type]]=].
+    {{EncodedAudioChunk/[[internal data]]}} bytes, (3) the
+    {{AudioDecoderConfig/description|AudioDecoderConfig.description}},
+    and (4) the values of {{EncodedAudioChunk}} {{EncodedAudioChunk/[[type]]}}.
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -30,21 +30,6 @@ Markup Shorthands:css no, markdown yes, dfn yes
 !Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
 !Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
 !Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
-</pre>
-
-<pre class='anchors'>
-spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
-    type: attribute
-        text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
-    type: dfn
-        for: EncodedAudioChunkType; text: key; url: dom-encodedaudiochunktype-key
-        for: EncodedAudioChunk; text: [[internal data]]; url: dom-encodedaudiochunk-internal-data-slot
-        for: EncodedAudioChunk; text: [[type]]; url: dom-encodedaudiochunk-type-slot
-    type: interface
-        text: EncodedAudioChunk; url: encodedaudiochunk
-    type: dictionary
-        text: AudioDecoderConfig; url: dictdef-audiodecoderconfig
-        text: AudioEncoderConfig; url: dictdef-audioencoderconfig
 </pre>
 
 <pre class='biblio'>
@@ -66,21 +51,21 @@ The codec string is `"alaw"`.
 EncodedAudioChunk data {#encodedaudiochunk-data}
 ================================================
 
-{{EncodedAudioChunk}} [=EncodedAudioChunk/[[internal data]]=] is expected to be
+{{EncodedAudioChunk}} {{EncodedAudioChunk/[[internal data]]}} is expected to be
 a sequence of bytes of arbitrary length, where each byte is an A-law
 encoded PCM sample as defined by Tables 1a and 1b in [[ITU-G.711]].
 
 AudioDecoderConfig description {#audiodecoderconfig-description}
 ================================================================
 
-An {{AudioDecoderConfig.description}} is expected to be omitted from the
+The {{AudioDecoderConfig/description}} is expected to be omitted from the
 {{AudioDecoderConfig}}.
 
 EncodedAudioChunk type {#encodedaudiochunk-type}
 ================================================
 
-The [=EncodedAudioChunk/[[type]]=] for an {{EncodedAudioChunk}} containing
-A-law PCM is always "[=EncodedAudioChunkType/key=]".
+The {{EncodedAudioChunk/[[type]]}} for an {{EncodedAudioChunk}} containing
+A-law PCM is always "{{EncodedAudioChunkType/key}}".
 
 Privacy Considerations {#privacy-considerations}
 ==========================================================================
