--- a/codec_registry.src.html
+++ b/codec_registry.src.html
@@ -34,23 +34,6 @@ Markup Shorthands:css no, markdown yes, dfn yes
 !Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
-<pre class='anchors'>
-spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
-    type: attribute
-        text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
-        text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
-    type: dfn
-        for: EncodedVideoChunk; text: [[type]]; url: dom-encodedaudiochunk-type-slot
-    type: interface
-        text: EncodedAudioChunk; url: encodedaudiochunk
-        text: EncodedVideoChunk; url: encodedvideochunk
-    type: dictionary
-        text: AudioDecoderConfig; url: dictdef-audiodecoderconfig
-        text: AudioEncoderConfig; url: dictdef-audioencoderconfig
-        text: VideoDecoderConfig; url: dictdef-videodecoderconfig
-        text: VideoEncoderConfig; url: dictdef-videoencoderconfig
-</pre>
-
 
 Organization {#organization}
 ============================
@@ -78,7 +61,7 @@ Registration Entry Requirements {#registration-entry-requirements}
     2. {{EncodedAudioChunk}} or {{EncodedVideoChunk}} internal data
     3. {{AudioDecoderConfig}} or {{VideoDecoderConfig}} description bytes
     4. Expectations for {{EncodedAudioChunk}} or {{EncodedVideoChunk}}
-        [=EncodedVideoChunk/[[type]]=]
+        {{EncodedVideoChunk/[[type]]}}
 3. Where applicable, a registration specification may include a section
     describing extensions to {{VideoEncoderConfig}} or {{AudioEncoderConfig}}
     dictionaries.
