--- a/mp3_codec_registration.src.html
+++ b/mp3_codec_registration.src.html
@@ -13,9 +13,10 @@ Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.co
 
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for MP3, the (1) fully qualified codec strings, (2)
-    the {{AudioDecoderConfig.description}} bytes, (3) the codec-specific
-    {{EncodedAudioChunk}} [=EncodedAudioChunk/[[internal data]]=] bytes, and (4)
-    the values of {{EncodedAudioChunk}} [=EncodedAudioChunk/[[type]]=].
+    the {{AudioDecoderConfig/description|AudioDecoderConfig.description}} bytes,
+    (3) the codec-specific {{EncodedAudioChunk}}
+    {{EncodedAudioChunk/[[internal data]]}} bytes, and (4)
+    the values of {{EncodedAudioChunk}} {{EncodedAudioChunk/[[type]]}}.
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -31,21 +32,6 @@ Markup Shorthands:css no, markdown yes, dfn yes
 !Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
 </pre>
 
-<pre class='anchors'>
-spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
-    type: attribute
-        text: AudioDecoderConfig.description; url: dom-audiodecoderconfig-description
-        text: AudioDecoderConfig.sampleRate; url: dom-audiodecoderconfig-samplerate
-        text: AudioDecoderConfig.numberOfChannels; url: dom-audiodecoderconfig-numberofchannels
-    type: dfn
-        for: EncodedAudioChunkType; text: key; url: dom-encodedaudiochunktype-key
-        for: EncodedAudioChunk; text: [[internal data]]; url: dom-encodedaudiochunk-internal-data-slot
-        for: EncodedAudioChunk; text: [[type]]; url: dom-encodedaudiochunk-type-slot
-    type: interface
-        text: EncodedAudioChunk; url: encodedaudiochunk
-    type: dictionary
-        text: AudioDecoderConfig; url: dictdef-audiodecoderconfig
-</pre>
 
 <pre class='biblio'>
 {
@@ -72,23 +58,23 @@ This codec has multiple equivalent codec strings:
 EncodedAudioChunk data {#encodedaudiochunk-data}
 ================================================
 
-{{EncodedAudioChunk}} [=EncodedAudioChunk/[[internal data]]=] is expected to be
+{{EncodedAudioChunk}} {{EncodedAudioChunk/[[internal data]]}} is expected to be
 a "frame", as described in the section 2.4.2.2 of the [[MP3]] specification.
 
 AudioDecoderConfig description {#audiodecoderconfig-description}
 ================================================================
 
-{{AudioDecoderConfig.description}} is not used for this codec.
+{{AudioDecoderConfig/description}} is not used for this codec.
 
-The {{AudioDecoderConfig.sampleRate}} and {{AudioDecoderConfig.numberOfChannels}}
+The {{AudioDecoderConfig/sampleRate}} and {{AudioDecoderConfig/numberOfChannels}}
 members are ignored.
 
 
 EncodedAudioChunk type {#encodedaudiochunk-type}
 ================================================
 
-The [=EncodedAudioChunk/[[type]]=] for an {{EncodedAudioChunk}} containing
-mp3 is always "[=EncodedAudioChunkType/key=]".
+The {{EncodedAudioChunk/[[type]]}} for an {{EncodedAudioChunk}} containing
+mp3 is always "{{EncodedAudioChunkType/key}}".
 
 NOTE: Once the initialization has succeeded, any mp3 packet can be decoded at
     any time without error, but this might not result in the expected audio
