--- a/vp8_codec_registration.src.html
+++ b/vp8_codec_registration.src.html
@@ -14,9 +14,9 @@ Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.co
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for VP8, the (1) fully qualified codec strings,
     (2) the codec-specific {{EncodedVideoChunk}}
-    [=EncodedVideoChunk/[[internal data]]=] bytes, (3) the
-    {{VideoDecoderConfig.description}} bytes, and (4) the values of
-    {{EncodedVideoChunk}} [=EncodedVideoChunk/[[type]]=].
+    {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the
+    {{VideoDecoderConfig/description|VideoDecoderConfig.description}} bytes,
+    and (4) the values of {{EncodedVideoChunk}} {{EncodedVideoChunk/[[type]]}}.
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -30,24 +30,6 @@ Markup Shorthands:css no, markdown yes, dfn yes
 !Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
 !Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
 !Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
-</pre>
-
-<pre class='anchors'>
-spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
-    type: attribute
-        text: EncodedVideoChunkMetadata.decoderConfig; url: dom-encodedvideochunkmetadata-decoderconfig
-        for: EncodedVideoChunkType; text: key; url: dom-encodedvideochunktype-key
-        text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
-    type: dfn
-        for: EncodedVideoChunk; text: [[internal data]]; url: dom-encodedvideochunk-internal-data-slot
-        for: EncodedVideoChunk; text: [[type]]; url: dom-encodedvideochunk-type-slot
-        for: VideoEncoder; text: [[output callback]]; url: dom-videoencoder-output-callback-slot
-    type: interface
-        text: EncodedVideoChunk; url: encodedvideochunk
-        text: VideoEncoder; url: videoencoder
-    type: dictionary
-        text: VideoEncoderConfig; url: dictdef-videoencoderconfig
-        text: VideoDecoderConfig; url: dictdef-videodecoderconfig
 </pre>
 
 <pre class='biblio'>
@@ -68,18 +50,18 @@ The codec string is `"vp8"`.
 EncodedVideoChunk data {#encodedvideochunk-data}
 ================================================
 
-{{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] is expected to be
+{{EncodedVideoChunk}} {{EncodedVideoChunk/[[internal data]]}} is expected to be
 a frame as described in Section 4 and Annex A of [[VP8]].
 
 VideoDecoderConfig description {#videodecoderconfig-description}
 ================================================================
 
-{{VideoDecoderConfig.description}} is not used for this codec.
+The {{VideoDecoderConfig/description}} is not used for this codec.
 
 EncodedVideoChunk type {#encodedvideochunk-type}
 ================================================
 
-If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
+If an {{EncodedVideoChunk}}'s {{EncodedVideoChunk/[[type]]}} is
 {{EncodedVideoChunkType/key}}, then the {{EncodedVideoChunk}} is expected to
 contain a frame where `key_frame` is true as defined in Section 19.1 of [[VP8]].
 
