--- a/avc_codec_registration.src.html
+++ b/avc_codec_registration.src.html
@@ -14,10 +14,10 @@ Former Editor: Chris Cunningham, w3cid 114832, Google Inc. https://www.google.co
 Abstract: This registration is entered into the [[webcodecs-codec-registry]].
     It describes, for AVC (H.264), the (1) fully qualified codec strings,
     (2) the codec-specific {{EncodedVideoChunk}}
-    [=EncodedVideoChunk/[[internal data]]=] bytes, (3) the
-    {{VideoDecoderConfig.description}} bytes, (4) the values of
-    {{EncodedVideoChunk}} [=EncodedVideoChunk/[[type]]=], and (5) the
-    codec-specific extensions to {{VideoEncoderConfig}}
+    {{EncodedVideoChunk/[[internal data]]}} bytes, (3) the
+    {{VideoDecoderConfig/description|VideoDecoderConfig.description}} bytes,
+    (4) the values of {{EncodedVideoChunk}} {{EncodedVideoChunk/[[type]]}},
+    and (5) the codec-specific extensions to {{VideoEncoderConfig}}
 
     The registration is not intended to include any information on whether a
     codec format is encumbered by intellectual property claims. Implementers and
@@ -31,24 +31,6 @@ Markup Shorthands:css no, markdown yes, dfn yes
 !Participate: <a href="https://github.com/w3c/webcodecs">Git Repository.</a>
 !Participate: <a href="https://github.com/w3c/webcodecs/issues/new">File an issue.</a>
 !Version History: <a href="https://github.com/w3c/webcodecs/commits">https://github.com/w3c/webcodecs/commits</a>
-</pre>
-
-<pre class='anchors'>
-spec: WEBCODECS; urlPrefix: https://w3c.github.io/webcodecs/#
-    type: attribute
-        text: EncodedVideoChunkMetadata.decoderConfig; url: dom-encodedvideochunkmetadata-decoderconfig
-        for: EncodedVideoChunkType; text: key; url: dom-encodedvideochunktype-key
-        text: VideoDecoderConfig.description; url: dom-videodecoderconfig-description
-    type: dfn
-        for: EncodedVideoChunk; text: [[internal data]]; url: dom-encodedvideochunk-internal-data-slot
-        for: EncodedVideoChunk; text: [[type]]; url: dom-encodedvideochunk-type-slot
-        for: VideoEncoder; text: [[output callback]]; url: dom-videoencoder-output-callback-slot
-    type: interface
-        text: EncodedVideoChunk; url: encodedvideochunk
-        text: VideoEncoder; url: videoencoder
-    type: dictionary
-        text: VideoEncoderConfig; url: dictdef-videoencoderconfig
-        text: VideoDecoderConfig; url: dictdef-videodecoderconfig
 </pre>
 
 <pre class='biblio'>
@@ -78,26 +60,26 @@ characters as described respectively in Section 3.4 of [[rfc6381]] and Section
 EncodedVideoChunk data {#encodedvideochunk-data}
 ================================================
 
-{{EncodedVideoChunk}} [=EncodedVideoChunk/[[internal data]]=] is expected to be
+{{EncodedVideoChunk}} {{EncodedVideoChunk/[[internal data]]}} is expected to be
 an access unit as defined in [[ITU-T-REC-H.264]] section 7.4.1.2.
 
 NOTE: An access unit contains exactly one primary coded picture.
 
 If the bitstream is in {{AvcBitstreamFormat/avc}} format,
-[=EncodedVideoChunk/[[internal data]]=] is assumed to be in canonical format, as
+{{EncodedVideoChunk/[[internal data]]}} is assumed to be in canonical format, as
 defined in [[iso14496-15]] section 5.3.2.
 
 If the bitstream is in {{AvcBitstreamFormat/annexb}} format,
-[=EncodedVideoChunk/[[internal data]]=] is assumed to be in in Annex B format,
+{{EncodedVideoChunk/[[internal data]]}} is assumed to be in in Annex B format,
 as defined in [[ITU-T-REC-H.264]] Annex B.
 
-NOTE: Since [=EncodedVideoChunk/[[internal data]]=] is inherently byte-aligned,
+NOTE: Since {{EncodedVideoChunk/[[internal data]]}} is inherently byte-aligned,
     implementations are not required to recover byte-alignment.
 
 VideoDecoderConfig description {#videodecoderconfig-description}
 ================================================================
 
-If the {{VideoDecoderConfig.description}} is present, it is assumed to be an
+If the {{VideoDecoderConfig/description}} is present, it is assumed to be an
 `AVCDecoderConfigurationRecord`, as defined by [[iso14496-15]], section
 5.3.3.1, and the bitstream is assumed to be in {{AvcBitstreamFormat/avc}}
 format.
@@ -105,7 +87,7 @@ format.
 NOTE: This format is commonly used in .MP4 files, where the player generally
     has random access to the media data.
 
-If the {{VideoDecoderConfig.description}} is not present, the bitstream is
+If the {{VideoDecoderConfig/description}} is not present, the bitstream is
 assumed to be in {{AvcBitstreamFormat/annexb}} format.
 
 NOTE: "annexb" format is described in greater detail by [[ITU-T-REC-H.264]],
@@ -116,16 +98,17 @@ NOTE: "annexb" format is described in greater detail by [[ITU-T-REC-H.264]],
 EncodedVideoChunk type {#encodedvideochunk-type}
 ================================================
 
-If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
+If an {{EncodedVideoChunk}}'s {{EncodedVideoChunk/[[type]]}} is
 {{EncodedVideoChunkType/key}}, and the bitstream is in
 {{AvcBitstreamFormat/avc}} format, then the {{EncodedVideoChunk}} is expected to
 contain a primary coded picture that is an instantaneous decoding refresh (IDR)
 picture.
 
 NOTE: If the bitstream is in {{AvcBitstreamFormat/avc}} format, parameter sets
-    necessary for decoding are included in {{VideoDecoderConfig.description}}.
+    necessary for decoding are included in
+    {{VideoDecoderConfig/description|VideoDecoderConfig.description}}.
 
-If an {{EncodedVideoChunk}}'s [=EncodedVideoChunk/[[type]]=] is
+If an {{EncodedVideoChunk}}'s {{EncodedVideoChunk/[[type]]}} is
 {{EncodedVideoChunkType/key}}, and the bitstream is in
 {{AvcBitstreamFormat/annexb}} format, then the {{EncodedVideoChunk}} is expected
 to contain both a primary coded picture that is an instantaneous decoding
@@ -195,9 +178,9 @@ mechanisms for packaging the bitstream.
   <dt><dfn enum-value for=AvcBitstreamFormat>avc</dfn></dt>
   <dd>
     SPS and PPS data are not included in the bitstream and are instead emitted
-    via the [=VideoEncoder/[[output callback]]=] as the
-    {{VideoDecoderConfig.description}} of the
-    {{EncodedVideoChunkMetadata.decoderConfig}}.
+    via the {{VideoEncoder/[[output callback]]}} as the
+    {{VideoDecoderConfig/description|VideoDecoderConfig.description}} of the
+    {{EncodedVideoChunkMetadata/decoderConfig|EncodedVideoChunkMetadata.decoderConfig}}.
 
     NOTE: This format is described in greater detail by [[iso14496-15]],
         section 5.3. This format is commonly used in .MP4 files, where the
