Adjust links to transferable and serializable objects
No need to link to headings anymore, the HTML spec now exports the notions of
"transferable object" and "serializable object".

--- a/index.src.html
+++ b/index.src.html
@@ -2633,8 +2633,8 @@ NOTE: When a [=media resource=] is no longer referenced by a
 This section is non-normative.
 
 {{AudioData}} and {{VideoFrame}} are both
-[[HTML#transferable-objects|transferable]] and
-[[HTML#serializable-objects|serializable]] objects. Their transfer and
+[=transferable object|transferable=] and
+[=serializable object|serializable=] objects. Their transfer and
 serialization steps are defined in [[#audiodata-transfer-serialization]] and
 [[#videoframe-transfer-serialization]] respectively.
 
